# cpqa-Dashboard-Evo

./: .gitignore  config.ini  pyproject.toml  requirements.txt  settings.toml  setup.py
cpqa/: __main__.py
cpqa/app/: CpqaApp.kv  __init__.py  app.py
cpqa/app/core/: __init__.py  _event_linux.py  _frame_rate.py  _painter.py  _scheduler.py  _screen.py  _worker_thread.py
cpqa/app/scene/: __init__.py  _exit_scene.py  _initializing_scene.py  _main_scene.py  _null_scene.py  _scene_director.py  _scene_interface.py
cpqa/app/ui/: __init__.py  auto_fit_label.py  power_button.py  value_name_label.py
cpqa/app/util/: graphics_util.py
cpqa/common/: __init__.py  _log.py  _settings.py  log.py  settings.py
cpqa/mut/: __init__.py  __mut_mock.py  __mut_native_proxy.py  _mut_client.py  mut_client.py  mut_result.py
cpqa/mut/request/: __init__.py  _afr_map.py  _air_conditioning_relay.py  _air_flow_rev.py  _air_volume.py  _barometer.py  _boost.py  _coolant_temperature.py  _crank_signal_switch.py  _egr_temperature.py  _engine_rpm.py  _fuel_consumption.py  _fuel_trim_high.py  _fuel_trim_mid.py  _gear.py  _idle_position_switch.py  _injector_duty_cycle.py  _injector_latency.py  _injector_pulse_width.py  _knock_voltage.py  _load_error.py  _maf_air_temperature.py  _multi_mut_request.py  _mut_request.py  _octane_level.py  _oxygen_feedback_trim.py  _oxygen_sensor.py  _oxygen_sensor2.py  _power_steering_switch.py  _speed.py  _target_idle_rpm.py  _timing_advance.py  air_flow_hz.py  (+11 more)
cpqa/native/: mut.cc
tests/common/: test_log.py  test_settings.py
tests/mut/: test_mut_client.py
(+10 files in other folders)
