[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cpqa"
version = "0.1.0"

[tool.setuptools.packages.find]
exclude = []

[tool.coverage.run]
omit = [
    "tests/*",
    "cpqa/mut/request/*",
    "cpqa/common/log.py",
    "cpqa/mut/__mut_mock.py",
]